--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,3 +1,64 @@
 <header class="header">
-
+  <div class="header__container">
+    <div class="header__logo">
+      <a class="logo" href="#">
+        <img class="logo__img" src="images/logo.svg" alt="logo">
+      </a>
+    </div>
+    <ul class="header__lang">
+      <li class="header__lang-item">
+        <a class="header__lang-link header__lang-link--active" href="#">EN</a>/
+      </li>
+      <li class="header__lang-item">
+        <a class="header__lang-link" href="#">UA</a>
+      </li>
+    </ul>
+    <nav class="header__menu menu">
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a class="menu__link" href="#">CATALOG</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">COLLECTIONS</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">ABOUT</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">BOOK AN APPOINTMENT</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">CONTACT</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header__actions">
+      <li class="header__actions-item">
+        <a class="header__actions-link" href="#">
+          <svg width="24" height="24">
+            <use xlink:href="images/sprite.svg#user"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header__actions-item">
+        <a class="header__actions-link" href="#">
+          <svg width="24" height="22">
+            <use xlink:href="images/sprite.svg#heart"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header__actions-item">
+        <a class="header__actions-link" href="#">
+          <svg width="24" height="24">
+            <use xlink:href="images/sprite.svg#shopping-bag"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <button class="menu-btn">
+      <svg width="30" height="19">
+        <use xlink:href="images/sprite.svg#mobile-btn"></use>
+      </svg>
+    </button>
+  </div>
 </header>
