--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,13 +1,14 @@
 // Colors
-$mainTextColor: #212121;
-// $secondaryTextColor: #ffffff;
+$mainTextColor: #4f4f4f;
+$secondaryTextColor: #161515;
+$whiteColor: #ffffff;
 // $accentColor: #026aa2;
-// $mainBgColor: #065986;
+$mainBgColor: #0f2b41;
 // $secondaryBgColor: #0086c9;
 
 // Breakpoints
-// $pc: 1199.98;
-// $tablet: 991.98;
-// $mobile: 767.98;
-// $mobileMedium: 574.98;
-// $mobileSmall: 479.98;
+// $pc: 1199.98px;
+$tablet: 991.98px;
+// $mobile: 767.98px;
+// $mobileMedium: 574.98px;
+// $mobileSmall: 479.98px;
