--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,3 +1,99 @@
 <footer class="footer">
-
+  <div class="footer__container">
+    <nav class="footer__nav">
+      <ul class="footer__nav-list">
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#">Catalog</a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#">Collections</a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#">About</a>
+        </li>
+        <li class="footer__nav-item footer__nav-item--logo">
+          <a class="logo" href="#">
+            <img class="logo__img" src="images/logo-white.svg" alt="logo">
+          </a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#">Book your appointment</a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="footer__contact">
+      <div class="footer__contact-item footer__contact-item--location">
+        <h5 class="footer__contact-title">Location</h5>
+        <address class="footer__contact-address">
+          Ukraine, Kyiv, <br>
+          st. Voitenko, 67
+        </address>
+      </div>
+      <div class="footer__contact-item">
+        <h5 class="footer__contact-title">Phones</h5>
+        <div class="footer__contact-box">
+          <a class="footer__contact-link" href="tel:+380676765324">+380 (67) 676 53 24</a>
+          <a class="footer__contact-link" href="tel:+380678846542">+380 (67) 884 65 42</a>
+        </div>
+      </div>
+      <div class="footer__contact-item">
+        <h5 class="footer__contact-title">Emails</h5>
+        <div class="footer__contact-box">
+          <a class="footer__contact-link" href="mailto:office@boss.com">office@boss.com</a>
+          <a class="footer__contact-link" href="mailto:sales@boss.com">sales@boss.com</a>
+        </div>
+      </div>
+      <div class="footer__contact-item footer__contact-item--email">
+        <h5 class="footer__contact-title">Sign-up for our newsletter</h5>
+        <form class="footer__contact-form" action="#">
+          <input class="footer__contact-input" type="email" placeholder="Enter your email">
+          <button class="footer__contact-btn" type="submit">
+            <svg width="15" height="11">
+              <use xlink:href="images/sprite.svg#mail"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+      <div class="footer__contact-item">
+        <h5 class="footer__contact-title">Social</h5>
+        <ul class="footer__social-list">
+          <li class="footer__social-item">
+            <a class="footer__social-link" href="#">
+              <svg width="24" height="24">
+                <use xlink:href="images/sprite.svg#fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a class="footer__social-link" href="#">
+              <svg width="24" height="24">
+                <use xlink:href="images/sprite.svg#inst"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer__copy">
+    <div class="footer__container">
+      <p class="footer__copy-text">
+        ©Boss. All rights reserved.
+      </p>
+      <ul class="footer__copy-list">
+        <li class="footer__copy-item">
+          <a class="footer__copy-link" href="#">Privacy Policy</a>
+        </li>
+        <li class="footer__copy-item">
+          <a class="footer__copy-link" href="#">Refund policy</a>
+        </li>
+        <li class="footer__copy-item">
+          <a class="footer__copy-link" href="#">Terms of Service</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
