--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,8 +7,8 @@ $mainBgColor: #0f2b41;
 // $secondaryBgColor: #0086c9;
 
 // Breakpoints
-// $pc: 1199.98px;
+$pc: 1199.98px;
 $tablet: 991.98px;
-// $mobile: 767.98px;
+$mobile: 767.98px;
 // $mobileMedium: 574.98px;
-// $mobileSmall: 479.98px;
+$mobileSmall: 479.98px;
