--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,6 +14,25 @@ body {
   }
 }
 
+.title {
+  font-family: "Lora", serif;
+  font-size: 45px;
+  line-height: 1.3;
+  color: vars.$secondaryTextColor;
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  &--white {
+    color: vars.$whiteColor;
+  }
+  @media (max-width: vars.$mobile) {
+    font-size: 35px;
+  }
+  @media (max-width: vars.$mobileSmall) {
+    font-size: 28px;
+  }
+}
+
 // ====== HEADER ========================================================================================
 
 .header {
@@ -495,19 +514,6 @@ body {
   }
   // .new-collection__title
   &__title {
-    font-family: "Lora", serif;
-    font-size: 45px;
-    line-height: 1.3;
-    color: vars.$secondaryTextColor;
-    &:not(:last-child) {
-      margin-bottom: 23px;
-    }
-    @media (max-width: vars.$mobile) {
-      font-size: 35px;
-    }
-    @media (max-width: vars.$mobileSmall) {
-      font-size: 28px;
-    }
   }
   // .new-collection__text
   &__text {
@@ -592,6 +598,120 @@ body {
     text-transform: uppercase;
     @media (max-width: vars.$pc) {
       padding-left: 70px;
+    }
+  }
+}
+
+// ============= JOIN US ==================================================================================
+
+.join-us {
+  position: relative;
+  background-color: vars.$mainBgColor;
+  color: vars.$whiteColor;
+  // .join-us__container
+  &__container {
+    display: flex;
+    justify-content: flex-end;
+    padding: 94px 10px;
+    @media (max-width: vars.$tablet) {
+      display: block;
+    }
+    @media (max-width: vars.$mobile) {
+      padding: 80px 10px;
+    }
+  }
+  // .join-us__content
+  &__content {
+    position: relative;
+    z-index: 1;
+    flex-basis: 578px;
+    @media (max-width: vars.$tablet) {
+      max-width: 578px;
+    }
+  }
+  // .join-us__title
+  &__title {
+  }
+  // .join-us__text
+  &__text {
+    font-family: "Lora", serif;
+    font-size: 30px;
+    line-height: 1.26;
+    &:not(:last-child) {
+      margin-bottom: 40px;
+    }
+    @media (max-width: vars.$tablet) {
+      max-width: 400px;
+    }
+    @media (max-width: vars.$mobile) {
+      max-width: 250px;
+      font-size: 20px;
+    }
+  }
+  // .join-us__form
+  &__form {
+  }
+  // .join-us__input
+  &__input {
+    width: 100%;
+    background-color: transparent;
+    padding-bottom: 5px;
+    border-bottom: 1px solid vars.$whiteColor;
+    color: vars.$whiteColor;
+    &:first-of-type {
+      margin-bottom: 20px;
+    }
+    &:last-of-type {
+      margin-bottom: 40px;
+    }
+    &::placeholder {
+      color: vars.$whiteColor;
+    }
+  }
+  // .join-us__form-btn
+  &__form-btn {
+    width: 100%;
+    padding: 12px;
+    border-radius: 3px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: vars.$secondaryTextColor;
+    transition: all 0.3s;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+    @media (any-hover: hover) {
+      &:hover {
+        background-color: vars.$whiteColor;
+        color: vars.$secondaryTextColor;
+      }
+    }
+  }
+  // .join-us__form-text
+  &__form-text {
+    font-size: 11px;
+    line-height: 1.3;
+    text-align: center;
+  }
+  // .join-us__img
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 48%;
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: top;
+      @media (max-width: vars.$tablet) {
+        object-position: left;
+      }
+    }
+    @media (max-width: vars.$tablet) {
+      width: 100%;
+      opacity: 0.5;
     }
   }
 }
