added about section to main page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@ body {
 .title {
   font-family: "Lora", serif;
   font-size: 45px;
+  text-transform: uppercase;
   line-height: 1.3;
   color: vars.$secondaryTextColor;
   &:not(:last-child) {
@@ -712,6 +713,127 @@ body {
     @media (max-width: vars.$tablet) {
       width: 100%;
       opacity: 0.5;
+    }
+  }
+}
+
+// ============= ABOUT ==================================================================================
+
+.about {
+  padding: 90px 0 150px;
+  @media (max-width: vars.$mobile) {
+    padding: 80px 0 120px;
+  }
+  @media (max-width: vars.$mobileSmall) {
+    padding: 60px 0 90px;
+  }
+  // .about__container
+  &__container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 40px;
+    @media (max-width: vars.$tablet) {
+      align-items: stretch;
+    }
+    @media (max-width: vars.$mobile) {
+      flex-wrap: wrap;
+    }
+    @media (max-width: vars.$mobileSmall) {
+      gap: 30px;
+    }
+  }
+  // .about__content
+  &__content {
+    flex-basis: 541px;
+    margin-left: 30px;
+    @media (max-width: vars.$pc) {
+      margin-left: 0;
+    }
+    @media (max-width: vars.$mobile) {
+      flex-basis: 100%;
+    }
+  }
+  // .about__title
+  &__title {
+    &:not(:last-child) {
+      margin-bottom: 5px;
+      @media (max-width: vars.$mobile) {
+        margin-bottom: 20px;
+      }
+    }
+  }
+  // .about__text
+  &__text {
+    p {
+      line-height: 1.37;
+      font-size: 16px;
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+    }
+    blockquote {
+      max-width: 417px;
+      margin: 70px 0;
+      padding: 20px 27px;
+      background-color: vars.$mainBgColor;
+      font-family: "Lora", serif;
+      color: vars.$whiteColor;
+      @media (max-width: vars.$pc) {
+        margin: 35px 0;
+      }
+      @media (max-width: vars.$mobile) {
+        max-width: none;
+        margin: 25px 0;
+      }
+    }
+    blockquote p {
+      font-size: 20px;
+      line-height: 1.3;
+    }
+  }
+  // .about__more
+  &__more {
+    flex-basis: 578px;
+    @media (max-width: vars.$mobile) {
+      flex-basis: 100%;
+    }
+  }
+  // .about__img
+  &__img {
+    &:not(:last-child) {
+      margin-bottom: 40px;
+      @media (max-width: vars.$mobileSmall) {
+        margin-bottom: 20px;
+      }
+    }
+    @media (max-width: vars.$tablet) {
+      height: 85%;
+    }
+    @media (max-width: vars.$mobile) {
+      height: auto;
+    }
+    img {
+      @media (max-width: vars.$tablet) {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+  // .about__link
+  &__link {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+    border: 1px solid vars.$secondaryTextColor;
+    transition: all 0.3s;
+    @media (any-hover: hover) {
+      &:hover {
+        color: vars.$whiteColor;
+        background-color: vars.$secondaryTextColor;
+      }
     }
   }
 }
