--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -720,12 +720,15 @@ body {
 // ============= ABOUT ==================================================================================
 
 .about {
-  padding: 90px 0 150px;
+  padding: 90px 0 233px;
+  @media (max-width: vars.$tablet) {
+    padding: 90px 0 90px;
+  }
   @media (max-width: vars.$mobile) {
-    padding: 80px 0 120px;
+    padding: 80px 0 80px;
   }
   @media (max-width: vars.$mobileSmall) {
-    padding: 60px 0 90px;
+    padding: 60px 0 60px;
   }
   // .about__container
   &__container {
@@ -834,6 +837,105 @@ body {
         color: vars.$whiteColor;
         background-color: vars.$secondaryTextColor;
       }
+    }
+  }
+}
+
+// ============ ADVANTAGES =======================================================================================
+
+.advantages {
+  background-color: vars.$mainBgColor;
+  color: vars.$whiteColor;
+  // .advantages__container
+  &__container {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    padding: 60px 10px 38px;
+    @media (max-width: vars.$tablet) {
+      justify-content: center;
+    }
+    @media (max-width: vars.$mobile) {
+      justify-content: flex-start;
+    }
+  }
+  // .advantages__img
+  &__img {
+    position: absolute;
+    left: 40px;
+    bottom: 0;
+    max-width: 378px;
+    @media (max-width: vars.$tablet) {
+      left: 0;
+      max-width: none;
+      width: 100%;
+      height: 100%;
+      opacity: 0.5;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 0px -100px;
+      }
+    }
+    @media (max-width: vars.$mobile) {
+      img {
+        object-position: top;
+      }
+    }
+  }
+  // .advantages__content
+  &__content {
+    position: relative;
+    z-index: 1;
+    max-width: 570px;
+    @media (max-width: vars.$tablet) {
+      max-width: 650px;
+    }
+    @media (max-width: vars.$mobile) {
+      padding-left: 40px;
+    }
+    @media (max-width: vars.$mobileSmall) {
+      padding-left: 20px;
+    }
+  }
+  // .advantages__title
+  &__title {
+    &:not(:last-child) {
+      margin-bottom: 50px;
+      @media (max-width: vars.$mobile) {
+        margin-bottom: 20px;
+      }
+    }
+  }
+  // .advantages__list
+  &__list {
+    margin-left: 15px;
+    column-count: 2;
+    column-gap: 95px;
+    @media (max-width: vars.$pc) {
+      column-gap: 70px;
+    }
+    @media (max-width: vars.$tablet) {
+      column-gap: 175px;
+    }
+    @media (max-width: vars.$mobile) {
+      column-count: 1;
+    }
+  }
+  // .advantages__item
+  &__item {
+    position: relative;
+    margin-bottom: 30px;
+    &::before {
+      content: "";
+      position: absolute;
+      left: -15px;
+      top: 8px;
+      width: 4px;
+      height: 5px;
+      border-radius: 50%;
+      background-color: vars.$whiteColor;
     }
   }
 }
