--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -722,13 +722,13 @@ body {
 .about {
   padding: 90px 0 233px;
   @media (max-width: vars.$tablet) {
-    padding: 90px 0 90px;
+    padding: 90px 0;
   }
   @media (max-width: vars.$mobile) {
-    padding: 80px 0 80px;
+    padding: 80px 0;
   }
   @media (max-width: vars.$mobileSmall) {
-    padding: 60px 0 60px;
+    padding: 60px 0;
   }
   // .about__container
   &__container {
@@ -830,6 +830,7 @@ body {
     padding: 10px;
     text-align: center;
     font-size: 16px;
+    color: vars.$secondaryTextColor;
     border: 1px solid vars.$secondaryTextColor;
     transition: all 0.3s;
     @media (any-hover: hover) {
@@ -936,6 +937,130 @@ body {
       height: 5px;
       border-radius: 50%;
       background-color: vars.$whiteColor;
+    }
+  }
+}
+
+// ============ BLOG ================================================================================
+
+.blog {
+  padding: 150px 0 90px;
+  @media (max-width: vars.$tablet) {
+    padding: 90px 0;
+  }
+  @media (max-width: vars.$mobile) {
+    padding: 80px 0;
+  }
+  @media (max-width: vars.$mobileSmall) {
+    padding: 60px 0;
+  }
+  // .blog__container
+  &__container {
+    display: flex;
+    gap: 20px;
+    @media (max-width: vars.$mobile) {
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+  }
+  // .blog__main
+  &__main {
+    flex-basis: 772px;
+    margin-left: 40px;
+    @media (max-width: vars.$pc) {
+      margin-left: 0;
+    }
+  }
+  // .blog__title
+  &__title {
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
+  // .blog__text
+  &__text {
+    max-width: 540px;
+    font-size: 16px;
+    &:not(:last-child) {
+      margin-bottom: 70px;
+      @media (max-width: vars.$tablet) {
+        margin-bottom: 35px;
+      }
+      @media (max-width: vars.$mobile) {
+        margin-bottom: 25px;
+      }
+    }
+    @media (max-width: vars.$mobile) {
+      max-width: none;
+    }
+  }
+  // .blog__item
+  &__item {
+    width: 100%;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+  // .blog__img
+  &__img {
+    max-height: 395px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    @media (max-width: vars.$mobile) {
+      margin-bottom: 10px;
+    }
+    img {
+      width: 100%;
+      min-height: 369px;
+      object-fit: cover;
+      transition: transform 0.5s;
+      @media (any-hover: hover) {
+        .blog__item:hover & {
+          transform: scale(1.05);
+        }
+      }
+    }
+  }
+  // .blog__item-title
+  &__item-title {
+    margin-bottom: 5px;
+    font-family: "Lora", serif;
+    line-height: 1.3;
+    text-decoration: underline;
+    text-decoration-color: transparent;
+    transition: all 0.3s;
+    @media (any-hover: hover) {
+      .blog__item:hover & {
+        text-decoration-color: inherit;
+      }
+    }
+  }
+  // .blog__date
+  &__date {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 1.37;
+  }
+  // .blog__box
+  &__box {
+    flex-basis: 300px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    @media (max-width: vars.$mobile) {
+      flex-basis: 100%;
+    }
+  }
+  // .blog__more
+  &__more {
+    @extend .about__link;
+    margin-top: auto;
+    margin-bottom: 75px;
+    @media (max-width: vars.$tablet) {
+      margin-bottom: 30px;
+    }
+    @media (max-width: vars.$mobile) {
+      margin-bottom: 0;
     }
   }
 }
